--- a/user-service-provider/pom.xml
+++ b/user-service-provider/pom.xml
@@ -16,6 +16,11 @@
             <artifactId>core-api</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <!-- 依赖 Spring Cloud Netflix Eureka -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-eureka</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <finalName>service-provider</finalName>
