--- a/user-service-client/pom.xml
+++ b/user-service-client/pom.xml
@@ -19,7 +19,11 @@
             <artifactId>core-api</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
-
+        <!-- 依赖 Spring Cloud Netflix Eureka -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-eureka</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <finalName>ribbon-client</finalName>
