--- a/user-service-client/src/main/resources/application.properties
+++ b/user-service-client/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 spring.application.name = user-service-client
 ##端口
 server.port = 8080
-##关闭eureka-server服务
-eureka.client.enabled = false
+##关闭eureka-server服务 --- 这里已经需要eureka
+#eureka.client.enabled = false
 
 ##提供服务方名称
 provider.service.name=user-service-provider
@@ -16,3 +16,9 @@ provider.service.port=9090
 ## 为 RibbonLoadBalancerClient 提供服务列表
 user-service-provider.ribbon.listOfServers = \
   http://${provider.service.host}:${provider.service.port}
+
+##配置 @FeignClient(name = "${user.service.name}") 中的占位符
+user.service.name = ${provider.service.name}
+
+##配置eurka server 地址 ,端口号80
+eureka.client.serviceUrl.defaultZone = http://localhost:10000/eureka
