添加config server，另外整合好eureka

--- a/user-service-client/src/main/resources/application.properties
+++ b/user-service-client/src/main/resources/application.properties
@@ -1,24 +1,16 @@
-## 项目ribbon-client端名称
-spring.application.name = user-service-client
 ##端口
-server.port = 8080
-##关闭eureka-server服务 --- 这里已经需要eureka
-#eureka.client.enabled = false
+server.port = 8182
+## 定义 user-service-provider Ribbon 的服务器地址
+## 为 RibbonLoadBalancerClient 提供服务列表
+#user-service-provider.ribbon.listOfServers = \
+#  http://${provider.service.host}:${provider.service.port}
 
-##提供服务方名称
+
+####提供服务方名称
 provider.service.name=user-service-provider
 ##提供服务方域名
 provider.service.host=localhost
 ##提供服务方端口
 provider.service.port=9090
-
-## 定义 user-service-provider Ribbon 的服务器地址
-## 为 RibbonLoadBalancerClient 提供服务列表
-user-service-provider.ribbon.listOfServers = \
-  http://${provider.service.host}:${provider.service.port}
-
 ##配置 @FeignClient(name = "${user.service.name}") 中的占位符
 user.service.name = ${provider.service.name}
-
-##配置eurka server 地址 ,端口号80
-eureka.client.serviceUrl.defaultZone = http://localhost:10000/eureka
