--- a/user-service-provider/src/main/resources/application.properties
+++ b/user-service-provider/src/main/resources/application.properties
@@ -1,9 +1,6 @@
 ## 项目ribbon-client端名称
-spring.application.name= user-service-provider
+spring.application.name=user-service-provider
 ##端口
 server.port=9090
-##关闭eureka-server服务 --- 已经启动eureka
-#eureka.client.enabled = false
-
 ##配置eurka server 地址 ,端口号80
 eureka.client.serviceUrl.defaultZone = http://localhost:10000/eureka
