--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,8 @@
 		<module>user-service-provider</module>
 		<module>hystrix-server</module>
 		<module>eureka-server</module>
-	</modules>
+        <module>config-server</module>
+    </modules>
 
 	<dependencies>
 		<dependency>
