--- a/user-service-client/pom.xml
+++ b/user-service-client/pom.xml
@@ -6,9 +6,9 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>ribbon-client</artifactId>
+    <artifactId>user-service-client</artifactId>
     <packaging>war</packaging>
-    <name>ribbon-client</name>
+    <name>user-service-client</name>
     <dependencies>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
@@ -24,8 +24,11 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-eureka</artifactId>
         </dependency>
+        <!-- 依赖 Spring Cloud Config Client -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
+
     </dependencies>
-    <build>
-        <finalName>ribbon-client</finalName>
-    </build>
 </project>
