添加zuul设置，不过zuul配置并没有上传到server config中

--- a/user-service-client/pom.xml
+++ b/user-service-client/pom.xml
@@ -10,6 +10,7 @@
     <packaging>war</packaging>
     <name>user-service-client</name>
     <dependencies>
+        <!-- 依赖 spring cloud ribbon -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
