--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
 		<module>hystrix-server</module>
 		<module>eureka-server</module>
         <module>config-server</module>
+        <module>zuul-proxy</module>
     </modules>
 
 	<dependencies>
